Change image source in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="images/pfpforweb2.png" alt="molly's discord pfp for now" style="width:140px;height:140px;">
+        <img src="pfpforweb2.png" alt="molly's discord pfp for now" style="width:140px;height:140px;">
       </td>
       <td>
         <h1>molly_pizza324</h1>
