Remove Youtuber and Dev thingy in introduction

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       <td>
         <h1>molly_pizza324</h1>
         <p><em>funny internet pizza woman</em></p>
-        <p>I am molly_pizza324. I'm a decent roblox developer. I'm also a <a href="https://www.youtube.com/channel/UCf-5z8rWLbRulMTZ8AqaMig">youtuber</a>, though i dont
-          do that as often now. I make art, and i enjoy cooking and coding. And I like memes! I love pizza too!!</p>
+        <p>I am molly_pizza324. I make art, and i enjoy cooking and coding. And I like memes! I love pizza too!!</p>
       </td>
     </tr>
   </table>
